# ducpdf

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/: conf.py  index.rst
src/: __init__.py
src/ducpdf/: main.py  pdf_to_duc.py  test_duc_to_pdf.py
tests/: .gitignore
