[project]
name = "ducpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

license = { text = "MIT" }

authors = [
    { name = "Ducflair", email = "support@ducflair.com" },
    { name = "Lara Sousa" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ducpy>=1.16.1",
    "pymupdf>=1.25.5",
]

[project.urls]
"Homepage" = "https://duc.ducflair.com"
"Source" = "https://github.com/ducflair/ducpdf"
"Documentation" = "https://ducpdf.ducflair.com"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm>=7.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.1.0"


[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.0",
]

